--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Exploding Kittens</title>
 </head>
-<body>
+<body background = "sky.png">
     <div id="app"></div>
     <script src="js/kittens.js"></script>
 </body>
