added shooting functionality

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Exploding Kittens</title>
 </head>
-<body background = "sky.png">
-    <div id="app"></div>
+<body background = "images/11.jpg">
+    <center><div id="app"></div></center>
+    <audio autoplay>
+      <source src="music/space.mp3">
+    </audio>
     <script src="js/kittens.js"></script>
 </body>
 </html>
